Twisted rework (#1896)
* twisted rework

* new parrot

* GenericTargetBoss fix

* parrot changes

* parrot changes prt2

* delve changes

* added twistedLeviathan

* nerf StatMultiplier in R1

* removed unused field

* fixed not taking player in creative

* fix index out of bound

* nerfed spawn rate

* other fixes

* fix

* removed fix

* fix prt2