@@ -4,8 +4,6 @@ import com.playmonumenta.plugins.bosses.SpellManager;
 import com.playmonumenta.plugins.bosses.parameters.EntityTargets;
 import com.playmonumenta.plugins.bosses.spells.Spell;
 import com.playmonumenta.plugins.utils.EntityUtils;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.bukkit.entity.Dolphin;
 import org.bukkit.entity.Golem;
@@ -19,11 +17,7 @@ public class GenericTargetBoss extends BossAbilityGroup {
 	public static final String identityTag = "boss_generictarget";
 
 	public static class Parameters extends BossParameters {
-
-		public int DETECTION = 100;
-
 		public EntityTargets TARGETS = EntityTargets.GENERIC_PLAYER_TARGET;
-
 	}
 
 	public static BossAbilityGroup deserialize(Plugin plugin, LivingEntity boss) throws Exception {
@@ -69,9 +63,12 @@ public class GenericTargetBoss extends BossAbilityGroup {
 						mob.setTarget(targets.get(0));
 						mLastTarget = targets.get(0);
 					} else {
+						mLastTarget = null;
 						mob.setTarget(null);
 					}
 				}
+
+				mob.setTarget(mLastTarget);
 			}
 
 			@Override
@@ -81,9 +78,8 @@ public class GenericTargetBoss extends BossAbilityGroup {
 
 		};
 
-		SpellManager activeSpells = new SpellManager(Arrays.asList(targetSpell));
 
-		super.constructBoss(activeSpells, Collections.emptyList(), param.DETECTION, null, 10);
+		super.constructBoss(SpellManager.EMPTY, List.of(targetSpell), (int) (param.TARGETS.getRange() * 1.5), null, 10);
 	}
 
 }
